objects/niq__Prediction_Parameter__c.object
<CustomObject>
    <description>This object contains the inputs required by the prediction model to generate prediction results.</description>
    <fields>
        <fullName>niq__Api_Name__c</fullName>
        <description>A value that represents a more user friendly name being sent to the API</description>
        <label>Api Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Context_Object_Type__c</fullName>
        <description>The user automatically populates this required text field with the type of the context object.</description>
        <label>Context Object Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Data_Type__c</fullName>
        <description>The user populates this required text field with the parameter’s data type.</description>
        <label>Data Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Prediction__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The system automatically populates this required lookup field with the related prediction.</description>
        <label>Prediction</label>
        <referenceTo>niq__Prediction__c</referenceTo>
        <relationshipLabel>Prediction</relationshipLabel>
        <relationshipName>Prediction</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>niq__Value_Path__c</fullName>
        <description>The system automatically populates this required text field with the path from the context to the value.</description>
        <label>Value Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Prediction Parameter</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prediction Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>